@@ -1,1 +1,99 @@
 # MotoTypeRush
+Typing Moto Racer
+
+🚀 Fast-Paced Typing Game Built with JavaFX
+
+Typing Moto Racer is an interactive JavaFX-based typing game where you control a motorbike by typing words correctly. The faster and more accurately you type, the quicker your bike moves toward the finish line! Mistakes slow you down, making it a fun and challenging way to improve typing speed.
+
+
+---
+
+🎮 How to Play?
+
+1️⃣ Start the game – A random word appears on the screen.
+2️⃣ Type the word correctly and press Enter to submit.
+3️⃣ Correct words increase your speed, mistakes slow you down.
+4️⃣ Race against time and reach the finish line first!
+
+
+---
+
+🛠️ Tech Stack
+
+Java (JDK 11+) – Core game logic
+
+JavaFX – UI, animations, and game visuals
+
+VS Code – IDE for development
+
+
+
+---
+
+⚙️ Installation & Setup
+
+1️⃣ Clone the Repository
+
+git clone https://github.com/your-username/TypingMotoRacer.git
+cd TypingMotoRacer
+
+2️⃣ Install Java & JavaFX
+
+Download Java JDK 11+ from AdoptOpenJDK.
+
+Download JavaFX SDK from OpenJFX.
+
+
+3️⃣ Run the Game in VS Code
+
+1. Open the project in VS Code.
+
+
+2. Configure JavaFX paths in launch.json:
+
+
+
+"vmArgs": "--module-path C:/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml"
+
+(Replace C:/javafx-sdk-XX with your JavaFX SDK path.)
+3. Run the game using F5 or Run > Start Debugging.
+
+
+---
+
+🚀 Features
+
+✅ Interactive UI – Smooth JavaFX interface with real-time bike movement
+✅ Speed-based Gameplay – Type correctly to accelerate, mistakes slow you down
+✅ Word Generator – Randomized words to improve typing efficiency
+✅ Real-time Feedback – See speed changes and position updates instantly
+✅ Game Timer – Race against time to reach the finish line
+
+
+---
+
+🌟 Future Enhancements
+
+🔹 Multiplayer Mode 🏁
+🔹 Leaderboard System 🏆
+🔹 More Difficulty Levels 🔥
+🔹 Improved Animations & UI 🎨
+
+
+---
+
+📜 License
+
+This project is open-source and available under the MIT License.
+
+
+---
+
+💡 Contributing
+
+Feel free to fork this repository and submit pull requests to improve the game! 🚀
+
+
+---
+
+🎮 Ready to Race? Type Fast & Win the Game! 🏍️🔥
